Changed option color to grey to avoid low contrast issues in different browsers

--- a/src/components/Filter/Filter.scss
+++ b/src/components/Filter/Filter.scss
@@ -32,6 +32,9 @@
   select {
     width: 110px;
   }
+  option {
+    color: #707070;
+  }
 }
 
 .open-filter,
